--- a/index.html
+++ b/index.html
@@ -136,6 +136,72 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <li>a13: “Sturz_Platten_und_kein_GPS”, 02.08.2021</li>
 </ol>
 <p>The titles shown in the list above are the original titel, that I gave the named the activity after finishing the ride. Judging from the titles, the trail has different conditions (“diesmal trocken”, “Rutschige nasse”), I had falls (“Sturz”) or problems with the GPS (“kein GPS”). The activities were tracked with different devices (old phone, new phone, watch) but I do not remember which activity was tracked with which device and this is therefore ignored.</p>
+<p>The following pictures (Figure 1) highlight some parts of the trail:</p>
+<ol type="a">
+<li>Medium-tight corner at the top of the trail</li>
+<li>Technically challenging corner in the upper middle of the trail, where a precise line choice is crucial</li>
+<li>Slightly off-camber root section, where a precise line choice is necessary (Photographed from the bottom)</li>
+<li>Corner in the middle of the trail, that I still cannot ride through</li>
+</ol>
+<div id="fig-trailpictures" class="quarto-layout-panel">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-trailpictures-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-trailpictures" style="flex-basis: 25.0%;justify-content: flex-start;">
+<div id="fig-topcorner" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-topcorner-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="photos/IMG_20240617_155719.jpg" class="img-fluid figure-img" data-ref-parent="fig-trailpictures">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-topcorner-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(a) Top-Corner
+</figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-trailpictures" style="flex-basis: 25.0%;justify-content: flex-start;">
+<div id="fig-technicalcorner" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-technicalcorner-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="photos/IMG_20240617_160033.jpg" class="img-fluid figure-img" data-ref-parent="fig-trailpictures">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-technicalcorner-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(b) Technical Corner
+</figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-trailpictures" style="flex-basis: 25.0%;justify-content: flex-start;">
+<div id="fig-rootsection" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-rootsection-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="photos/IMG_20240617_162214.jpg" class="img-fluid figure-img" data-ref-parent="fig-trailpictures">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-rootsection-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(c) Root Section
+</figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-trailpictures" style="flex-basis: 25.0%;justify-content: flex-start;">
+<div id="fig-notridecorner" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-notridecorner-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="photos/IMG_20240617_163115.jpg" class="img-fluid figure-img" data-ref-parent="fig-trailpictures">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-notridecorner-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(d) Corner that I cannot ride
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-trailpictures-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;1: Photos of the Trail
+</figcaption>
+</figure>
+</div>
 <p>To crop the records to the correct extent (“Bleiki DH”), I used a manually drawn line of the part of the hiking path on the Swisstopo Web Map. To attempt the Map Matching, I started with using the “DKM10_STRASSE” layer from the vectorized 1:10 000 map from Swisstopo (https://www.swisstopo.admin.ch/de/landeskarte-swiss-map-vector-10). Since this path does not match the real course of the hiking path, I later used the path from the Open Street Map (https://www.openstreetmap.org/#map=16/46.6937/7.8627), which does match the Digital Elevation Model better.</p>
 </section>
 <section id="methods" class="level3">
